@@ -16,6 +16,10 @@ Version 1.8.9
        did not work. (Stefan)
 - BUG: Issue #673: filtering out regular
        expressions crashes. (Stefan)
+- BUG: Issue #674: illegal temp file name when
+       diffing from server root. (Stefan)
+- BUG: Issue #675: bug-id field not set correctly
+       for a restarted commit. (Stefan)
 
 Version 1.8.8
 - BUG: Issue #640: Restore after commit - Unchecked
